After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 614634 - EOG prevents the Desktop thumbnails to be updated.
EOG prevents the Desktop thumbnails to be updated.
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: collection
2.30.x
Other Linux
: Normal normal
: GNOME3.0
Assigned To: EOG Maintainers
EOG Maintainers
Depends on: 534348
Blocks:
 
 
Reported: 2010-04-02 02:44 UTC by Yann
Modified: 2010-10-07 05:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Store in EogImage the modification time of the file (2.03 KB, patch)
2010-09-10 12:11 UTC, Claudio Saavedra
none Details | Review
Add eog_image_get_modification_time() accessor (1.77 KB, patch)
2010-09-10 12:11 UTC, Claudio Saavedra
none Details | Review
Do not use the loaded pixbuf to update the thumbnail when outdated (1.39 KB, patch)
2010-09-10 12:11 UTC, Claudio Saavedra
none Details | Review
Store the changed status of an image file (1.86 KB, patch)
2010-09-13 15:39 UTC, Claudio Saavedra
none Details | Review
Add eog_image_is_file_changed() (1.58 KB, patch)
2010-09-13 15:39 UTC, Claudio Saavedra
none Details | Review
Don't create thumbnails out of outdated image pixbufs (1.36 KB, patch)
2010-09-13 15:40 UTC, Claudio Saavedra
none Details | Review

Description Yann 2010-04-02 02:44:08 UTC
(bug first reported on Launchpad: https://bugs.launchpad.net/ubuntu/+source/eog/+bug/548880)

On Ubuntu 10.04

- Copy an image on your Desktop (this step is important)
- Open it with EOG. Then modify it with the "Edit image" button located inside EOG. Modify it, save the changes. The on the Desktop is not updated (the thumbnail disappears as if was being updated, but then returns the same as before).
- Close the EOG window (without closing the Fspot window), then save again the modification in Fspot. This time the thumbnail on the Desktop is updated.
--> It looks that EOG prevents the thumbnail to be updated.
Comment 1 Claudio Saavedra 2010-04-02 13:49:37 UTC
(In reply to comment #0)
> (bug first reported on Launchpad:
> https://bugs.launchpad.net/ubuntu/+source/eog/+bug/548880)
> 
> On Ubuntu 10.04
> 
> - Copy an image on your Desktop (this step is important)
> - Open it with EOG. Then modify it with the "Edit image" button located inside
> EOG. Modify it, save the changes. The on the Desktop is not updated (the
> thumbnail disappears as if was being updated, but then returns the same as
> before).

This step is not reproducible with upstream Eye of GNOME.

> - Close the EOG window (without closing the Fspot window), then save again the
> modification in Fspot. This time the thumbnail on the Desktop is updated.
> --> It looks that EOG prevents the thumbnail to be updated.

I'll close this as invalid. If you can provide different steps to reproduce this bug that doesn't require the downstream modifications, then please reopen.
Comment 2 Yann 2010-04-03 09:18:07 UTC
Thank you for your answer.

So this bug is specific to the Ubuntu's version of EOG only ?
That means it must be discussed on Launchpad, and solved by the Ubuntu's team, am I right ?

Regards
Comment 3 Felix Riemann 2010-04-03 12:55:14 UTC
(In reply to comment #2)
> Thank you for your answer.
> 
> So this bug is specific to the Ubuntu's version of EOG only ?
> That means it must be discussed on Launchpad, and solved by the Ubuntu's team,
> am I right ?

As long as the way you describe above is the only way to reproduce the problem and the Ubunutu team deems it critical enough, this is correct.

But, if you can find a way to reproduce it without requiring (yet-)Ubuntu-specific features we can investigate the problem.
Comment 4 Felix Riemann 2010-04-03 13:31:48 UTC
Okay, just played around a bit out of curiosity how eog could block thumbnailing and I think I might have found an alternative way to reproduce it:

1. Copy the image to the Desktop (it's reproducible in other folders too, but harder to catch)
2. Open the image in eog.
3. Select File->Open with->[Pick any editor] (I used GIMP)
4. Modify the image in the editor and save it.

This shows the wrong thumb here.
Yann, can you confirm that this is the same problem?
Comment 5 Yann 2010-04-03 14:10:31 UTC
I was writing the same at the same time ;)

I could reproduce using Gimp, and Fspot (opened separately, not from the EOG button).
 
Another remark: after your procedure, close EOG and Gimp, then open the image again (from the Desktop) with EOG : the thumbnail is not updated. Close EOG. Then open Nautilus and go to the Desktop folder, open the image with EOG from Nautilus, this time the thumbnail is updated !
Comment 6 Felix Riemann 2010-04-04 12:16:08 UTC
Okay, this is related to the codepath in eog that creates thumbnails from the currently loaded pixbuf. eog apparently gets notified that the image has changed and goes to update the thumbnail. As it is currently loaded it takes the fast path to use the currently loaded pixbuf data to generate the thumbnail without respecting the image data has changed.
If you modify an image that is currently not the active image in eog it works correctly.

I'm not so much into eog's thumbnailing code anymore, so don't expect a quick fix.



(Hmm, apparently it's not possible to go from VERIFIED to NEW directly.)
Comment 7 Felix Riemann 2010-04-04 12:22:13 UTC
Setting milestone as this is going to be a rather visible bug once the patch from bug 609958 is merged (not setting it as a blocker for it yet). Sorry for the bugzilla spam.
Comment 8 Claudio Saavedra 2010-04-04 13:41:28 UTC
I can look into this.
Comment 9 Yann 2010-09-08 14:54:01 UTC
Any news for this bug ?

(by the way I updated the Ubuntu bug descriptions, the correct downstream report is now : https://bugs.launchpad.net/eog/+bug/633228 )
Comment 10 Claudio Saavedra 2010-09-09 22:33:48 UTC
This is not the only problem. Also, if nautilus is quick enough, eog will just load the thumbnail from the cache (which will be updated to reflect the file changes) and will put it, for instance, in the application icon, making it inconsistent with the shown image.
Comment 11 Claudio Saavedra 2010-09-10 12:11:24 UTC
Created attachment 169944 [details] [review]
Store in EogImage the modification time of the file
Comment 12 Claudio Saavedra 2010-09-10 12:11:31 UTC
Created attachment 169945 [details] [review]
Add eog_image_get_modification_time() accessor
Comment 13 Claudio Saavedra 2010-09-10 12:11:36 UTC
Created attachment 169946 [details] [review]
Do not use the loaded pixbuf to update the thumbnail when outdated

Fixes bug 614634 - EOG prevents the Desktop thumbnails to be updated
Comment 14 Felix Riemann 2010-09-11 11:21:50 UTC
Is there a reason this is done using the mtime?
Couldn't this use the work from bug 534348? Just notice the file changed and mark the image data as outdated until it's reloaded?
Comment 15 Claudio Saavedra 2010-09-13 15:39:38 UTC
Created attachment 170167 [details] [review]
Store the changed status of an image file
Comment 16 Claudio Saavedra 2010-09-13 15:39:58 UTC
Created attachment 170168 [details] [review]
Add eog_image_is_file_changed()
Comment 17 Claudio Saavedra 2010-09-13 15:40:05 UTC
Created attachment 170169 [details] [review]
Don't create thumbnails out of outdated image pixbufs

Fixes bug #614634 - EOG prevents the Desktop thumbnails to be updated
Comment 18 Claudio Saavedra 2010-09-13 15:43:20 UTC
OK, you are correct. I fixed it this other way because I had no plans to work on bug 534348. But once we get these patches in, this is a sensible way to do it, indeed.

I am not yet 100% convinced about the new function name, it's a bit odd to me.
Comment 19 Felix Riemann 2010-09-14 16:34:19 UTC
(In reply to comment #18)
> I am not yet 100% convinced about the new function name, it's a bit odd to me.

Hmm, what about eog_image_needs_reload() or eog_image_is_in_sync() (or just synced?)?
Comment 20 Claudio Saavedra 2010-09-15 13:43:02 UTC
Hm, apparently you put this bug in the NEWS file instead of 534348 ?
Comment 21 Felix Riemann 2010-09-15 15:55:34 UTC
(In reply to comment #20)
> Hm, apparently you put this bug in the NEWS file instead of 534348 ?

Whoops! This is the stuff that happens when I open too many tabs in Firefox. :)
Fixed it!
Comment 22 Felix Riemann 2010-10-06 19:29:56 UTC
Pushed to master to have it fixed. We can still rename the function in the next months if we find a better name.

This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
Comment 23 Yann 2010-10-07 05:16:45 UTC
Thank you Felix and Claudio for having solved it !