Don't create thumbnails out of outdated image pixbufs

Eog bug reff http://bugzilla.gnome.org/show_bug.cgi?id=614634

Based on eog commit 35ea437d25c94cbd7c0c61c7a4c3094a239048d8
From Claudio Saavedra <csaavedra@igalia.com>